fix test and docs for include user in transaction
